Fix for overflow-x

--- a/src/less/template/index.less
+++ b/src/less/template/index.less
@@ -16,6 +16,7 @@
 	position: relative;
 	width: 100%;
 	height: 100%;
+	overflow-x: hidden;
 }
 
 /* .text {
@@ -48,7 +49,7 @@
 	// overflow: scroll-y;
 	padding: 24px 0;
 	border: 0;
-	box-sizing: border-box;
+	// box-sizing: border-box;
 	color: var(--color-ink);
 	background-color: var(--color-bg);
 	font-family: "RVS Basic";
